--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;700&display=swap");
 
+body {
+  font-family: "Raleway", sans-serif, Arial;
+  margin: auto;
+}
+
 :root {
   --blue: #0065fc;
   --light-blue: #deebff;
@@ -22,38 +27,55 @@ a {
   color: var(--blue);
 }
 
+
 /* LOGO + s'inscrire */
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
+
+header{
+  display:flex;
+  flex-wrap:wrap;
+  align-items:center;
+  width:100%;
 }
 
-.header a {
-  font-weight: 700;
+.navItem1{
+  width:49%;
+  padding:10px;
+}
+
+.navItem2{
+  order:2;
+  margin-top:1rem;
+  display:flex;
+  width:100%;
+}
+
+.navItem2 a{
+  padding:0 10px 10px 20px;
+  width:100%;
+  text-align:center;
+}
+
+.navItem2 a:first-of-type{
+  border-bottom:3px solid var(--blue);
+}
+
+.navItem2 a:last-of-type{
+  border-bottom:3px solid var(--gray);
+  color:black;
+}
+
+.navItem3{
+  order:1;
+  text-align:right;
+  width:49%;
+}
+
+.navItem3 a{
+  font-weight:700;
 }
 
 .hideOnMobile {
   display: none;
-}
-/* Lien de navigation */
-nav {
-  display: flex;
-  justify-content: space-around;
-}
-
-nav a {
-  padding: 1rem;
-  border-bottom: 3px solid var(--gray);
-  color: black;
-  width: 100%;
-  text-align: center;
-}
-
-nav a[data-active="true"] {
-  color: #0065fc;
-  border-bottom: 3px solid var(--blue);
 }
 
 /* FILTER */
@@ -375,19 +397,40 @@ footer a:last-of-type {
 }
 
 @media (min-width: 668px) and (max-width: 1199px) {
-  .header {
-    padding: 0;
+  
+  header{
+    flex-wrap:nowrap;
+    align-items:center;
   }
 
-  .header > nav a {
-    border-bottom: none;
-    font-weight: 400;
-    padding-top: 30px;
+  .navItem1{
+    padding:0;
   }
 
-  nav a[data-active="true"] {
-    border-bottom: none;
-    border-top: 3px solid var(--blue);
+  .navItem2 a{
+    width:100%;
+  }
+
+  .navItem2{
+    width:40%;
+    margin-top:0;
+  }
+
+  .navItem3{
+    order:3;
+    width:10%;
+    margin-top:20px;
+  }
+
+  .navItem2 a:first-of-type{
+    border-bottom:none;
+    border-top:2px solid var(--blue);
+    padding-top:2rem;
+  }
+
+  .navItem2 a:last-of-type{
+    border-bottom:none;
+    padding-top:2rem;
   }
 
   .filterSearchBar {
@@ -524,33 +567,45 @@ footer a:last-of-type {
     display: inline-flex;
   }
 
-
-  nav a[data-active="true"] {
-    border-bottom: none;
-    border-top: 3px solid var(--blue);
-  }
-
-  .header > nav a {
-    border-bottom: none;
-    font-weight: 400;
-    padding-top: 30px;
-  }
-
-  .header > nav a:hover {
-    color: var(--blue);
-  }
-
-  .header > nav a:last-of-type {
-    color: var(--blue);
-    font-weight: 700;
-  }
-
   .hideOnDesktop {
     display: none;
   }
 
   .header {
-    padding: 0;
+    flex-wrap:nowrap;
+    align-items:center;
+  }
+
+ .navItem1{
+    padding:0;
+    width:63%;
+  }
+
+  .navItem2 a{
+    width:100%;
+  }
+
+  .navItem2{
+    width:25%;
+    margin-top:0;
+  }
+
+  .navItem3{
+    order:3;
+    width:10%;
+    margin-top:20px;
+    text-align:center;
+  }
+
+  .navItem2 a:first-of-type{
+    border-bottom:none;
+    border-top:2px solid var(--blue);
+    padding-top:2rem;
+  }
+
+  .navItem2 a:last-of-type{
+    border-bottom:none;
+    padding-top:2rem;
   }
 
   .filterSearchBar {
@@ -648,10 +703,15 @@ footer a:last-of-type {
   #activity{
     margin:3rem 0 3rem 0;
   }
+
   .activityContainer {
-    display: flex;
     column-gap: 3rem;
     row-gap: 2rem;
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;      /* TWEENER - IE 10 */
+    display: -webkit-flex;     /* NEW - Chrome */
+    display: flex;        
   }
 
   .activityBigItem {
